hydra/test/test_examples/type_errors/dec_invalid_types.tpc
header bool[10] x;
init {} 
telemetry {} 
check {}